--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
 
 <body>
     <div class="main-box">
-        <audio>
-            src="file:///C:/Users/Zmennn/Desktop/izvrat/photos/tr1.mp3"
-
-
-
+        <audio autoplay>
+            <source src="photos/Soul-Of-Water.mp3">
         </audio>
         <h1>З ДНЕМ ЗАКОХАННИХ ЛЮБА</h1>
         <!--photo-->
         <div>
-            <img src="photos/rose.jpg" alt="pose">
+            <img src="./photos/rose.jpg" alt="pose">
 
         </div>
     </div>
