--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="main-box">
         <audio autoplay>
-            <source src="photos/Soul-Of-Water.mp3">
+            <source src="http://dzherela.com.ua/files/Vodograi-DZHERELA.mp3">
         </audio>
         <h1>З ДНЕМ ЗАКОХАННИХ ЛЮБА</h1>
         <!--photo-->
