--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <div class="main-box">
-        <audio autoplay>
-            <source src="http://dzherela.com.ua/files/Vodograi-DZHERELA.mp3">
+        <audio src="http://dzherela.com.ua/files/popurri-myru.mp3" autoplay>
+
         </audio>
         <h1>З ДНЕМ ЗАКОХАННИХ ЛЮБА</h1>
         <!--photo-->
