--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <audio src="http://dzherela.com.ua/files/popurri-myru.mp3" autoplay>
 
         </audio>
-        <h1>З ДНЕМ ЗАКОХАННИХ ЛЮБА!!</h1>
+        <h1>З ДНЕМ ЗАКОХАННИХ ЛЮБА</h1>
         <!--photo-->
         <div>
             <img src="./photos/rose.jpg" alt="pose">
