--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 
 <body>
     <div class="main-box">
-        <audio src="http://dzherela.com.ua/files/popurri-myru.mp3" autoplay>
-
-        </audio>
-        <h1>З ДНЕМ ЗАКОХАННИХ ЛЮБА</h1>
+        <h1> Зі святом весни!</h1>
         <!--photo-->
         <div>
             <img src="./photos/rose.jpg" alt="pose">
