--- a/index.html
+++ b/index.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>rock Paper Scissors</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>congratulations</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
-    <div class="main-box">
-        <h1> Зі святом весни!</h1>
-        <!--photo-->
-        <div>
-            <img src="./photos/rose.jpg" alt="pose">
-
-        </div>
+  <body>
+    <div class="title-cont">
+      <h1 class="title-cont__title">Камень-ножницы-бумага</h1>
     </div>
-</body>
-
+    <script src="./js-3.js"></script>
+  </body>
 </html>
