--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
   </head>
 
   <body>
-    <div class="title-cont">
-      <h1 class="title-cont__title">Камень-ножницы-бумага</h1>
+    <div class="main-container">
+      <div class="title-cont">
+        <div class="rock-container is-hidden"></div>
+        <div class="paper-container is-hidden"></div>
+        <div class="scissors-container is-hidden"></div>
+        <h1 class="title-cont__title">Камень-ножницы-бумага</h1>
+      </div>
     </div>
-    <script src="./js-3.js"></script>
+
+    <script src="./index.js"></script>
   </body>
 </html>
