--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 
   <body>
     <div class="main-container">
+      <div class="rock-container is-hidden"></div>
+      <div class="paper-container is-hidden"></div>
+      <div class="scissors-container is-hidden"></div>
+      <div class="result-container is-hidden"></div>
+      <span class="player-score"></span>
+      <span class="comp-score"></span>
       <div class="title-cont">
-        <div class="rock-container is-hidden"></div>
-        <div class="paper-container is-hidden"></div>
-        <div class="scissors-container is-hidden"></div>
         <h1 class="title-cont__title">Камень-ножницы-бумага</h1>
       </div>
     </div>
