--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>rock Paper Scissors</title>
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/main.min.css" />
   </head>
 
   <body>
